--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -36,6 +36,13 @@
   }
 }
 
+@if $hide_category_topic_stats == "true" {
+.category-list .topics {
+    display: none;
+  }
+}
+
+
 // * formatting the stats * //
 
 //.latest-topic-list .posts-map, .top-topic-list .posts-map {
