--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -69,11 +69,11 @@
 // * font size and weight of the topic replies count * //
 
 .latest-topic-list .posts-map, .top-topic-list .posts-map {
-  font-weight: $replies_count_font_weight;
-  font-size: #{$replies_count_font_size}px;
-//  color: $replies_count_font_color;
+  font-weight: $topic_replies_count_font_weight;
+  font-size: #{$topic_replies_count_font_size}px;
+//  color: $topic_replies_count_font_color;
 //  &:hover {
-//  color: $replies_count_hover_color;
+//  color: $topic_replies_count_hover_color;
 //  }  
 }
 
