--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -60,6 +60,11 @@
 
 // * font size and weight of the topic views count * //
 
+.topic-list .views {
+  font-weight: $topic_views_count_font_weight;
+  font-size: #{$topic_views_count_font_size}px;
+}
+
 .above-latest-topic-list-item-post-count-outlet {
   font-weight: $topic_views_count_font_weight;
   font-size: #{$topic_views_count_font_size}px;
@@ -67,6 +72,11 @@
 }
 
 // * font size and weight of the topic replies count * //
+
+.topic-list .num .badge-posts {
+  font-weight: $topic_replies_count_font_weight;
+  font-size: #{$topic_replies_count_font_size}px;
+}
 
 .latest-topic-list .posts-map, .top-topic-list .posts-map {
   font-weight: $topic_replies_count_font_weight;
@@ -78,6 +88,11 @@
 }
 
 // * font size and weight of the time since last activity * //
+
+.topic-list .num.activity a {
+  font-weight: $time_since_latest_activity_font_weight;
+  font-size: #{$time_since_latest_activity_font_size}px;
+}
 
 .latest-topic-list-item .topic-last-activity a {
   font-weight: $time_since_latest_activity_font_weight;
