--- a/common.scss
+++ b/common.scss
@@ -1,6 +1,8 @@
 // * hide all stats from anon users in both mobile and desktop views * //
 
-@if $hide_all_stats_from_anon == "true" {
+@if $hide_all_stats_from_anon == "true" {   
+  .topic-list .topic-item-stats .num.activity ,
+  .topic-list .num.posts-map,
   .topic-list .num.views, 
   .topic-list .views,
   .topic-list .activity,
@@ -11,4 +13,3 @@
     display: none;
   }
 }
-
