--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -4,12 +4,10 @@
    }
 }
 
-//@if $hide_badge_notification_in_mobile_view == "true" {
-//   .topic-post-badges,
-//   .topic-list .badge-notification {
-//      display: none;
-//   }
-//}
+@if $hide_category_stats_in_mobile_view == "true" {
+  .category-list-item>footer, .subcategory-list-item>footer {
+    display: none;
+}
 
 @if $hide_time_since_last_activity_in_mobile_view == "true" { 
    .topic-list .topic-item-stats .num.activity {
