--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -7,6 +7,7 @@
 @if $hide_category_stats_in_mobile_view == "true" {
   .category-list-item>footer, .subcategory-list-item>footer {
     display: none;
+   }
 }
 
 @if $hide_time_since_last_activity_in_mobile_view == "true" { 
