--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -1,5 +1,6 @@
 @if $hide_topic_stats_in_mobile_view == "true" {
-   .topic-list .num.posts-map {
+   .topic-list .num.posts-map,
+   .topic-list .topic-item-stats .num.activity{
       display: none;
    }
 }
@@ -7,11 +8,5 @@
 @if $hide_category_stats_in_mobile_view == "true" {
   .category-list-item>footer, .subcategory-list-item>footer {
     display: none;
-   }
-}
-
-@if $hide_time_since_last_activity_in_mobile_view == "true" { 
-   .topic-list .topic-item-stats .num.activity {
-      display: none;
    }
 }
